package reg;

message XLRegMsg {
    enum Tag {
        // 2013-10-01 dropped Hello and HelloReply; using ../msg/HelloAndReply 
        // functions instead

        // NOW-OBSOLETE CODE ----------------------------------------
        // This message is RSA-encrypted using the server's public key.
        // Hello    = 1;    // (one-shot)KeyIV, salt, version; init comms cycle
        // Response to Hello is silent close OR error OR reply. 
        // The server's reply is encrypted using the client's IV + key
        // and PKCS7-padded
        // HelloReply= 2;    // (session) KeyIV2, salt, salt2, version2
        // END NOW-OBSOLETE CODE ------------------------------------
    
        // All messages are encrypted using the server-provided
        // session key and PKCS7-padded.
        Client      	= 3;    // token OR clientID, digSig
        ClientOK    	= 4;    // clientID, attrs

        // size means cluster size, constrained to 1 < n <= 64
        // epCount is number of menber endPoints, which must be 1 or 2
        Create      	= 5;    // clusterName, size, epCount
        CreateReply 	= 6;    // clusterID, size, epCount

        // Response to Join is clusterID + size + epCount -OR- error
        Join        	= 7;    // clusterName or clusterID
        JoinReply   	= 8;    // clusterID, size, epCount

        GetCluster  	= 9;    // clusterID, which = bit vector; -1 = all
        // Response to Get is a list of known members -OR- error
        ClusterMembers 	= 10;   // clusterID, which, tokens

        // Orderly close
        Bye         	= 11;   // from client
        Ack         	= 12;   // from server; followed by close
        
        Error       	= 13;   // errDesc; from server, followed by close
        
    }
    // the Token describes a member
    message Token {
        optional string Name        = 1;
	    optional uint64 Attrs       = 2;    // bit field
	    optional bytes  ID          = 3;    // 20 or 32 byte nodeID
        optional bytes  CommsKey    = 4;
        optional bytes  SigKey      = 5;
        // by convention, MyEnds[0] for inter-cluster comms, 
        // MyEnds[1] for cluster-client comms
        // there must be epCount endPoints present
        repeated string MyEnds      = 6;    // overlay, endPoint
	    optional bytes  DigSig      = 7;    // over fields present, in order
	}
    optional Tag    Op              = 1;
    optional bytes  AesIV           = 2;
    optional bytes  AesKey          = 3;
    optional bytes  Salt1           = 4;    // error if len < 8
    optional bytes  Salt2           = 5;    // error if len < 8
    optional uint32 Version         = 6;    // little-endian, so stored D.C.B.A
    
    optional string ClientName      = 8;
    optional bytes  ClientID        = 9;
    optional uint64 ClientAttrs     = 10;
    optional Token  ClientSpecs     = 11;

    optional bytes  ClusterID       = 13;       
    optional string ClusterName     = 14; 
    optional uint32 ClusterSize     = 15;
    optional uint64 ClusterAttrs    = 16; 
    optional uint32 EndPointCount   = 17;   // each member must have

    optional uint64 Which           = 20;   // bitset, members requested/sent 
    repeated Token  Tokens          = 21;   // specs for members
    optional bytes  DigSig          = 22;

    optional string ErrDesc         = 23;
}

